# beecrowd-desafios

./: 1000_hello_word  1001_extremely_basic  CMakeLists.txt  area_of_a_circle  avarage_1  average_2  main  simple_product  simples_sum
1011_sphere/: 1011_sphere.py
1015_distance_between_two_points/: 1015_distance_between_two_points.py
1016_distance/: 1016_distance.py
1018_banknotes/: 1018_banknotes.py
1019_time_conversion/: 1019_time_conversion.py
1021_banknotes_and_coins/: 1021_banknotes_and_coins.py
1023_drought/: 1023_drought_enunciado.txt
1035_selection_teste1/: 1035_selection_teste1.py
1038_snack/: 1038_snack.py
1041_coordinates_of_a_point/: 1041_coordinates_of_a_point.py
1042_simple_sort/: 1042_simple_sort.py
1044_multiples/: 1044_multiples.py
1046_game_time/: 1046_game_time_enunciado.txt
1047_game_time_with_minutes/: 1047_game_time_with_minutes.py  1047_game_time_with_minutes_enunciado.txt
1048_salary_increase/: 1048_salary_increase_enunciado.txt
1050_ddd/: 1050_ddd.py
1051_taxes/: 1051_taxes.py
1052_month/: 1052_month.py
1059_event_numbers/: 1059_event_numbers.py
1061_event_time/: 1061_event_time.py
1064_positives_and_average/: 1064_positives_and_average.py  1064_positives_and_average_enunciado.txt
1065_even_between_five_numbers/: 1065_even_between_five_numbers_enunciado.txt
1066_even_odd_positive_and_negative/: 1066_even_odd_positive_and_negative_enunciado.txt
1067_odd_numbers/: 1067_odd_numbers.py
1070_six_odd_numbers/: 1070_six_odd_numbers.py  1070_six_odd_numbers_enunciado.txt
1115_quadrant/: 1115_quadrant.py
(+290 files in other folders)
